# advent-of-code

./: .gitignore  readme.md
2020/: 01_report_repair.clj  02_password_philosophy.clj  03_toboggan_trajectory.clj  04_passport_processing.clj  05_binary_boarding.clj  06_custom_customs.clj  07_handy_hoversacks.clj  readme.md
2021/: 01_sonar_sweep.rb  02_dive.rb  03_binary_diagnostic.rb  04_giant_squid.rb  05_hydrothermal_venture.rb  06_lanternfish.rb  07_the_treachery_of_whales.rb  08_seven_segment_search.rb  09_smoke_basin.rb  10_syntax_scoring.rb  11_dumbo_octopus.rb  12_passage_pathing.rb  13_extended_polymerization.rb  13_transparent_origami.rb  14_extended_polymerization.rb  15_chiton.rb  16_packet_decoder.rb  17_trick_shot.rb  18_snailfish.rb  19_beacon_scanner.rb  20_trench_map.rb  21_dirac_dice.rb  22_reactor_robot.rb  24_alu.rb  25_sea_cucumber.rb  readme.md
2022/: 01_calorie_counting.py  02_rock_paper_scissors.py  03_rucksack_reorganization.py  04_camp_cleanup.py  05_supply_crates.py  06_tuning_table.py  07_no_space_left_on_device.py  08_treetop_tree_house.py  09_rope_bridge.py  10_cathode_ray_tube.py  11_monkey_in_the_middle.py  12_hill_climbing_algorithm.py  13_distress_signal.py  14_regolith_reservoir.py  15_beacon_exclusion_zone.py  16_proboscidea_volcanium.py  17_pyroclastic_flow.py  18_boiling_boulders.py  grid.py  pyproject.toml  readme.md  utils.py
2023/: 01_trebuchet.jl  02_cube_conundrum.jl  03_gear_ratios.jl  04_scratchcards.jl  05_seed_map.jl  05_seed_map_.jl  06_wait_for_it.jl  07_camel_cards.jl  08_haunted_wasteland.jl  09_mirage_maintenance.jl  (+19 more)
(+57 files in other folders)
