[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Collection of solutions for AOC2022"
authors = ["technomunk <thegriffones@gmail.com>"]
readme = "README.md"
packages = [{ include = "advent_of_code" }]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
mypy = "^0.991"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target_version = ["py311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
